    some situations.
  * Don't allow uploading an attachment with the same name as an existing
    page, to avoid confusion.
  * Split out error messages from editpage.tmpl into several separate
    templates.
  * attachment: Do not escape _ when determining attachment filenames.
  * Rebuild pages that change their type. (Gabriel McManus)

 -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400

ikiwiki (2.54) unstable; urgency=low

  [ Joey Hess ]
  * Make it possible to load setup files w/o running them. Code
    needing to do so can call IkiWiki::Setup::load, which will return
    a hash of values.

  [ Josh Triplett ]
  * ikiwiki-transition: Fix command-line processing so the prefix_directives
    transition works again.

  [ Joey Hess ]
  * template: Add support for a BASENAME variable.
  * Fixes creation of pages when clicking on WikiLinks starting with "/".
  * Change deb dependencies to list Text::Markdown before markdown, since
    the former, while slower, has a much better html parser that avoids
    numerous bugs.
  * Move yesno function out of inline and into IkiWiki core, not exported.
  * Error handling improvement for preprocess hooks. It's now safe to call
    error() from such hooks; it will cause a nicely formatted error message
    to be inserted into the page.
  * Cut the size of the binary package in half by excluding pages for bugs
    and todo items from the html shipped in it.
  * parentlinks: New plugin, split out of ikiwiki core and enabled by default,
    and several new fields added to allow for advanced styling. (intrigeri)
  * smileys: Some fixes for escaped smileys.
  * smileys: Note that smileys need to be double-escaped for the escaping to
    work. Markdown removes one level of escaping.
  * Add a postscan hook.
  * search: Use postscan hook, avoid updating index when previewing.
  * git: Put web committer name/openid/address in the git author field.