@@ -1,5 +1,5 @@
 I've added three new functions to the ikiwiki VCS interface to support
-renaming and removing files using the web interface. The bzr, mercurial,
+renaming and removing files using the web interface. The bzr,
 monotone, and tla [[rcs]] backends need implementions of these functions.
 
 (The maintainers of these backends have been mailed. --[[Joey]])
