@@ -25,6 +25,7 @@ ikiwiki (2.55) UNRELEASED; urgency=low
     templates.
   * attachment: Do not escape _ when determining attachment filenames.
   * Rebuild pages that change their type. (Gabriel McManus)
+  * mercurial: Add support for rename, delete, and also diff. (William Uther)
 
  -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400
 
